Added lexar functions to parser

--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -20,4 +20,32 @@ server {
     location = /404.html {
         root /var/www/html;
     }
+
+    
+    location = / { 
+    ...
+    }
+    location = /images { 
+    ...
+    }
+    location /images/ {
+        ...
+        ...
+    }
+    location ^~ /images {
+    ...
+    ...
+    }
+    location ~* .(png|ico|gif|jpg|jpeg|css|js)$ {
+    ...
+    ...
+    }
+    location ~ /images {
+    ...
+    ...
+    }
+    location ~* /images {
+        ...
+        ...
+    }
 }
