--- a/configs/test.conf
+++ b/configs/test.conf
@@ -10,6 +10,7 @@ server {
     }
 
     location /api/ {
+        try_files =304;
         proxy_pass http://backend_server;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -25,7 +26,8 @@ server {
 server {
     listen 8002;
     server_name localhost;
-    host}
+    host
+}
 
 server {
     listen 8002;
@@ -39,4 +41,28 @@ server {
         allow_methods  DELETE POST GET;
         autoindex off;
     }
+}
+
+server {
+    listen                       80;
+    listen                       443 ssl;
+
+    server_name                  app.example.com;
+    if ($ssl_protocol = "") {
+        rewrite ^ https://$host$request_uri? permanent;
+    }
+
+    location / {
+        proxy_pass    http://node_upstream;
+    }
+
+    location /sockjs {
+        proxy_set_header      Connection "upgrade";
+        proxy_set_header      Upgrade $http_upgrade;
+        proxy_set_header      X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header      Host $host;
+        proxy_http_version    1.1;
+        proxy_pass            http://node_upstream;
+    }
+
 }
