--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -9,23 +9,23 @@ server {
         try_files $uri $uri/ =404;
     }
 
-    location /api/ {
-        proxy_pass http://backend_server;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
+    # location /api/ {
+    #     proxy_pass http://backend_server;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    # }
 
     error_page 404 /404.html;
     location = /404.html {
         root /var/www/html;
     }
 
-    
-    location = / { 
+
+    location = / {
     ...
     }
-    location = /images { 
+    location = /images {
     ...
     }
     location /images/ {
