--- a/configs/test.conf
+++ b/configs/test.conf
@@ -13,8 +13,8 @@ server {
         try_files =304;
         proxy_pass http://backend_server;
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header X-Real-IP $remote_addr;
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     error_page 404 /404.html;
@@ -26,7 +26,7 @@ server {
 server {
     listen 8002;
     server_name localhost;
-    host
+    host localhost;
 }
 
 server {
@@ -45,12 +45,12 @@ server {
 
 server {
     listen                       80;
-    listen                       443 ssl;
+    # listen                       443 ssl;
 
     server_name                  app.example.com;
-    if ($ssl_protocol = "") {
-        rewrite ^ https://$host$request_uri? permanent;
-    }
+    # if ($ssl_protocol = "") {
+    #     rewrite ^ https://$host$request_uri? permanent;
+    # }
 
     location / {
         proxy_pass    http://node_upstream;
@@ -58,9 +58,9 @@ server {
 
     location /sockjs {
         proxy_set_header      Connection "upgrade";
-        proxy_set_header      Upgrade $http_upgrade;
-        proxy_set_header      X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header      Host $host;
+        # proxy_set_header      Upgrade $http_upgrade;
+        # proxy_set_header      X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header      Host $host;
         proxy_http_version    1.1;
         proxy_pass            http://node_upstream;
     }
