--- a/configs/test.conf
+++ b/configs/test.conf
@@ -15,9 +15,15 @@ server {
         proxy_set_header Host $host;
         # proxy_set_header X-Real-IP $remote_addr;
         # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        allow_methods GET;
+    }
+
+    location /api/test/ {
+        allow_methods  DELETE POST GET;
     }
 
     error_page 404 /404.html;
+    # error_page 403 /403.html;
     location = /404.html {
         root /var/www/html;
     }
@@ -37,7 +43,7 @@ server {
     index index.html;
     error_page 404 error_pages/404.html;
 
-    location / {
+    location /api/ {
         allow_methods  DELETE POST GET;
         autoindex off;
     }
@@ -45,7 +51,7 @@ server {
 
 server {
     listen                       80;
-    # listen                       443 ssl;
+    # listen                       8080;
 
     server_name                  app.example.com;
     # if ($ssl_protocol = "") {
