--- a/configs/test.conf
+++ b/configs/test.conf
@@ -9,6 +9,12 @@ server {
         try_files $uri $uri/ =404;
     }
 
+    error_page 404 /404.html;
+    # error_page 403 /403.html;
+    location = /404.html {
+        root /var/www/html;
+    }
+
     location /api/ {
         try_files =304;
         proxy_pass http://backend_server;
@@ -22,11 +28,19 @@ server {
         allow_methods  DELETE POST GET;
     }
 
-    error_page 404 /404.html;
-    # error_page 403 /403.html;
-    location = /404.html {
-        root /var/www/html;
+    
+    location /api/me/ {
+        allow_methods POST;
     }
+    
+    location /api/me/me2/ {
+        allow_methods POST;
+    }
+    
+    location /api/test/test2 {
+        allow_methods POST;
+    }
+
 }
 
 server {
