next things to work on

--- a/configs/test_location.conf
+++ b/configs/test_location.conf
@@ -5,6 +5,7 @@ server {
     root /var/www/html;
     index index.html index.htm;
     allow_methods  DELETE POST GET;
+    include /configs/mime.types;
 
     location / {
         try_files $uri $uri/ =404;
@@ -25,15 +26,24 @@ server {
         allow_methods  DELETE POST GET;
     }
 
-    
+
     location /api/me/ {
         allow_methods POST;
     }
-    
+
+    location /api/me/test1/test2/page1 {
+        allow_methods POST;
+    }
+
+
+    location /api/me/page1 {
+        allow_methods POST;
+    }
+
     location /api/me/me2/ {
         allow_methods POST;
     }
-    
+
     location /api/test/test2 {
         allow_methods POST;
     }
