--- a/configs/default.conf
+++ b/configs/default.conf
@@ -1,13 +1,12 @@
-# server {
-#     listen 8002;
-#     server_name localhost;
-#     host 127.0.0.1;
-#     root docs/fusion_web/;
-#     index index.html;
-#     error_page 404 error_pages/404.html;
+server {
+    listen 127.0.0.1:8002;
+    server_name localhost;
+    root docs/fusion_web/;
+    index index.html;
+    error_page 404 error_pages/404.html;
 
-#     location / {
-#         allow_methods  DELETE POST GET;
-#         autoindex off;
-#     }
-# }
+    location / {
+        allow_methods  DELETE POST GET;
+        autoindex off;
+    }
+}
