--- a/configs/test.conf
+++ b/configs/test.conf
@@ -1,8 +1,8 @@
 http {
+    include configs/mime.types;
     server {
-        listen 80;
+        listen 127.0.0.1:80;
         server_name example.com;
-
         root /var/www/html;
         index index.html index.htm;
 
@@ -47,7 +47,8 @@ http {
     server {
         listen 8002;
         server_name localhost;
-        host localhost;
+        host 192.168.2.1;
+        root docs/fusion_web/;
     }
 
     server {
@@ -65,9 +66,10 @@ http {
     }
 
     server {
-        listen                       80;
+        listen                       127.0.0.1:11;
         # listen                       8080;
 
+        root docs/fusion_web/;
         server_name                  app.example.com;
         # if ($ssl_protocol = "") {
         #     rewrite ^ https://$host$request_uri? permanent;
