--- a/configs/default.conf
+++ b/configs/default.conf
@@ -1,15 +1,15 @@
 http {
     include       configs/mime.types;
     server {
-        listen 127.0.0.1:8002;
+        listen 127.0.0.1:8080;
         server_name localhost;
         # root docs/fusion_web/;
         index index.html;
         error_page 404 error_pages/404.html;
 
-        # location / {
-        #     allow_methods  DELETE POST GET;
-        #     autoindex off;
-        # }
+        location / {
+            allow_methods  DELETE POST GET;
+            autoindex off;
+        }
     }
 }
