Deleted invalid configs, changed default to work with data folder and added invalid folder for error testing configs

--- a/configs/invalid/port.conf
+++ b/configs/invalid/port.conf
@@ -3,11 +3,11 @@ http {
     server {
         listen 127.0.0.1:8080;
         server_name localhost;
-        root data/www/;
+        # root docs/fusion_web/;
         index index.html;
-        error_page 50 http/custom_50.html;
-        error_page 404 http/custom_404.html;
-        location /http/ {
+        error_page 404 error_pages/404.html;
+
+        location / {
             allow_methods  DELETE POST GET;
             autoindex off;
         }
