Added invalid configs for testing

--- a/configs/invalid/port_min.conf
+++ b/configs/invalid/port_min.conf
@@ -1,13 +1,13 @@
 http {
     include       configs/mime.types;
     server {
-        listen 127.0.0.1:8080;
+        listen 127.0.0.1:0;
         server_name localhost;
-        # root docs/fusion_web/;
+        root data/www/;
         index index.html;
-        error_page 404 error_pages/404.html;
-
-        location / {
+        error_page 50 http/custom_50.html;
+        error_page 404 http/custom_404.html;
+        location /http/ {
             allow_methods  DELETE POST GET;
             autoindex off;
         }
