bug stoi getErrorPage

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -9,7 +9,7 @@ http {
         error_page 404 http/custom_404.html;
         location /http/ {
             allow_methods  DELETE POST GET;
-            autoindex off;
+            autoindex on;
         }
     }
 }
