path now right to file, add signals

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -11,5 +11,13 @@ http {
             allow_methods  DELETE POST GET;
             autoindex on;
         }
+		location / {
+			autoindex on;
+			allow_methods GET POST DELETE;
+		}
+		location /images/ {
+			autoindex on;
+			allow_methods GET;
+		}
     }
 }
