Added config tester and more invalid configs

--- a/configs/invalid/unclosed_http.conf
+++ b/configs/invalid/unclosed_http.conf
@@ -1,7 +1,7 @@
 http {
     include       configs/mime.types;
     server {
-        listen 127.0.0.1:99999;
+        listen 127.0.0.1:8080;
         server_name localhost;
         root data/www/;
         index index.html;
@@ -9,7 +9,14 @@ http {
         error_page 404 http/custom_404.html;
         location /http/ {
             allow_methods  DELETE POST GET;
-            autoindex off;
+            autoindex on;
         }
-    }
-}
+		location / {
+			autoindex on;
+			allow_methods GET POST DELETE;
+		}
+		location /images/ {
+			autoindex on;
+			allow_methods GET;
+		}
+	}
