--- a/configs/invalid/no_listen.conf
+++ b/configs/invalid/no_listen.conf
@@ -1,7 +1,6 @@
 http {
     include       configs/mime.types;
     server {
-        listen 127.0.0.1:99999;
         server_name localhost;
         root data/www/;
         index index.html;
@@ -9,7 +8,15 @@ http {
         error_page 404 http/custom_404.html;
         location /http/ {
             allow_methods  DELETE POST GET;
-            autoindex off;
+            autoindex on;
         }
-    }
+		location / {
+			autoindex on;
+			allow_methods GET POST DELETE;
+		}
+		location /images/ {
+			autoindex on;
+			allow_methods GET;
+		}
+	}
 }
