--- a/configs/invalid/no_root.conf
+++ b/configs/invalid/no_root.conf
@@ -1,15 +1,22 @@
 http {
     include       configs/mime.types;
     server {
-        listen 127.0.0.1:99999;
+        listen 127.0.0.1:8080;
         server_name localhost;
-        root data/www/;
         index index.html;
         error_page 50 http/custom_50.html;
         error_page 404 http/custom_404.html;
         location /http/ {
             allow_methods  DELETE POST GET;
-            autoindex off;
+            autoindex on;
         }
-    }
+		location / {
+			autoindex on;
+			allow_methods GET POST DELETE;
+		}
+		location /images/ {
+			autoindex on;
+			allow_methods GET;
+		}
+	}
 }
