added good errorpage contenttype

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -5,12 +5,12 @@ http {
         server_name localhost;
         root data/www/;
         index index.html;
-		autoindex on;
+		autoindex off;
         error_page 50 http/custom_50.html;
         error_page 404 http/custom_404.html;
         location /http/ {
             allow_methods  DELETE POST GET;
-            autoindex on;
+            autoindex off;
         }
 	}	
 }
