--- a/configs/default.conf
+++ b/configs/default.conf
@@ -6,7 +6,7 @@ http {
         root data/www/;
         index index.html;
 		autoindex on;
-        error_page 50 http/custom_50.html;
+        error_page 50 http/custom_50x.html;
         error_page 404 http/custom_404.html;
         location /http/ {
             allow_methods  DELETE POST GET;
