different pathgenerator and changed buttons html

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -5,12 +5,25 @@ http {
         server_name localhost;
         root data/www/;
         index index.html;
-		autoindex on;
+        autoindex on;
         error_page 500 http/custom_50x.html;
         error_page 500 http/custom_404.html;
         location /http/ {
             allow_methods  DELETE POST GET;
             autoindex on;
         }
-	}
+        location /www/ {
+            allow_methods  DELETE POST GET;
+            autoindex on;
+        }
+        location /images/ {
+            autoindex on;
+        }
+        location /cgi-bin/ {
+            autoindex on;
+        }
+        location /old-page {
+            return 301 index.html;
+        }
+    }
 }
