--- a/configs/default.conf
+++ b/configs/default.conf
@@ -23,7 +23,7 @@ http {
             autoindex on;
         }
         location /old-page {
-            return 301 index.html;
+            return 301 /http/contact.html;
         }
     }
 }
