--- a/configs/more_servers.conf
+++ b/configs/more_servers.conf
@@ -1,19 +1,7 @@
 http {
     include       configs/mime.types;
     server {
-        listen 100.100.100.100:8080;
-        server_name localhost;
-        root data/www/;
-        index index.html;
-        error_page 50 http/custom_50.html;
-        error_page 404 http/custom_404.html;
-        location /http/ {
-            allow_methods  DELETE POST GET;
-            autoindex off;
-        }
-    }
-    server {
-        listen 101.101.101.101:8080;
+        listen 0.0.0.0:1111
         server_name server1;
         root data/www/;
         index index.html;
@@ -30,7 +18,7 @@ http {
         }
     }
     server {
-        listen 102.102.102.102:8080;
+        listen 0.0.0.0:2222
         server_name server2;
         root data/www/;
         index index.html;
@@ -47,7 +35,7 @@ http {
         }
     }
     server {
-        listen 103.103.103.103:8080;
+        listen 0.0.0.0:3333
         server_name server3;
         root data/www/;
         index index.html;
@@ -64,7 +52,7 @@ http {
         }
     }
     server {
-        listen 104.104.104.104:8080;
+        listen 0.0.0.0:4444
         server_name server4;
         root data/www/;
         index index.html;
@@ -81,7 +69,7 @@ http {
         }
     }
     server {
-        listen 105.105.105.105:8080;
+        listen 0.0.0.0:5555
         server_name server5;
         root data/www/;
         index index.html;
@@ -98,7 +86,7 @@ http {
         }
     }
     server {
-        listen 106.106.106.106:8080;
+        listen 0.0.0.0:6666
         server_name server6;
         root data/www/;
         index index.html;
@@ -115,7 +103,7 @@ http {
         }
     }
     server {
-        listen 107.107.107.107:8080;
+        listen 0.0.0.0:7777
         server_name server7;
         root data/www/;
         index index.html;
@@ -132,7 +120,7 @@ http {
         }
     }
     server {
-        listen 108.108.108.108:8080;
+        listen 0.0.0.0:8888
         server_name server8;
         root data/www/;
         index index.html;
@@ -149,7 +137,7 @@ http {
         }
     }
     server {
-        listen 109.109.109.109:8080;
+        listen 0.0.0.0:9999
         server_name server9;
         root data/www/;
         index index.html;
@@ -166,7 +154,7 @@ http {
         }
     }
     server {
-        listen 110.110.110.110:8080;
+        listen 0.0.0.0:1010
         server_name server10;
         root data/www/;
         index index.html;
