changed default configs and tester_conf

--- a/configs/host-port.conf
+++ b/configs/host-port.conf
@@ -4,8 +4,7 @@ http {
         listen 127.0.0.1:8081;
         listen 127.0.1.1:8080;
         listen localhost;
-        listen 0.0.0.0:1010;
-        listen [::]:2020;
+        listen 0.0.0.0:8082;
         listen 3030;
         server_name first123.com;
         root data/www/;
@@ -20,7 +19,7 @@ http {
         }
 	}
     server{
-        listen 80.80.80.80:8080;
+        listen localhost:9090;
         server_name first123.com;
         root data/www/;
         index index.html;
