--- a/configs/more_servers.conf
+++ b/configs/more_servers.conf
@@ -1,7 +1,7 @@
 http {
     include       configs/mime.types;
     server {
-        listen 0.0.0.0:1111
+        listen 0.0.0.0:1111;
         server_name server1;
         root data/www/;
         index index.html;
@@ -18,7 +18,7 @@ http {
         }
     }
     server {
-        listen 0.0.0.0:2222
+        listen 0.0.0.0:2222;
         server_name server2;
         root data/www/;
         index index.html;
@@ -35,7 +35,7 @@ http {
         }
     }
     server {
-        listen 0.0.0.0:3333
+        listen 0.0.0.0:3333;
         server_name server3;
         root data/www/;
         index index.html;
@@ -52,7 +52,7 @@ http {
         }
     }
     server {
-        listen 0.0.0.0:4444
+        listen 0.0.0.0:4444;
         server_name server4;
         root data/www/;
         index index.html;
@@ -69,7 +69,7 @@ http {
         }
     }
     server {
-        listen 0.0.0.0:5555
+        listen 0.0.0.0:5555;
         server_name server5;
         root data/www/;
         index index.html;
@@ -86,7 +86,7 @@ http {
         }
     }
     server {
-        listen 0.0.0.0:6666
+        listen 0.0.0.0:6666;
         server_name server6;
         root data/www/;
         index index.html;
@@ -103,7 +103,7 @@ http {
         }
     }
     server {
-        listen 0.0.0.0:7777
+        listen 0.0.0.0:7777;
         server_name server7;
         root data/www/;
         index index.html;
@@ -120,7 +120,7 @@ http {
         }
     }
     server {
-        listen 0.0.0.0:8888
+        listen 0.0.0.0:8888;
         server_name server8;
         root data/www/;
         index index.html;
@@ -137,7 +137,7 @@ http {
         }
     }
     server {
-        listen 0.0.0.0:9999
+        listen 0.0.0.0:9999;
         server_name server9;
         root data/www/;
         index index.html;
@@ -154,7 +154,7 @@ http {
         }
     }
     server {
-        listen 0.0.0.0:1010
+        listen 0.0.0.0:11110;
         server_name server10;
         root data/www/;
         index index.html;
