--- a/configs/invalid/11_port_max.conf
+++ b/configs/invalid/11_port_max.conf
@@ -1,7 +1,7 @@
 http {
     include       configs/mime.types;
     server {
-        listen 127.0.0.1:99999;
+        listen 127.0.0.1:65537; # Invalid port number
         server_name localhost;
         root data/www/;
         index index.html;
