Added eval changes

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -7,20 +7,22 @@ http {
         index index.html;
         autoindex on;
         error_page 500 http/custom_50x.html;
-        error_page 404 http/custom_404.html;
+        error_page 404 /http/custom_404.html;
+        error_page 403 /http/custom_403.html;
         location /http/ {
-            allow_methods  DELETE POST GET;
+            allow_methods  POST GET;
             autoindex on;
         }
         location /www/ {
-            allow_methods  DELETE POST GET;
+            allow_methods DELETE POST GET;
             autoindex on;
         }
         location /images/ {
-            autoindex on;
+            autoindex off;
         }
         location /cgi-bin/ {
-            autoindex on;
+			allow_methods DELETE GET POST;
+            autoindex off;
         }
         location /old-page {
             return 301 /http/contact.html;
